Update study of self-similar BTree prc vs N_steps on an Amer Put.

--- a/Doc_Ctrl_Var2.ipynb
+++ b/Doc_Ctrl_Var2.ipynb
@@ -851,7 +851,7 @@
    "metadata": {},
    "source": [
     "#### Summary\n",
-    "Calculating option prices on a consecutive N_steps pair of trees at large N, iterating for $\\alpha_\\infty$ between this pair and a left end point pair(or better average of several consecutive pairs for left end point). Then can quickly, accurately calculate option price from $L + \\alpha_\\infty (H - L)$.\n",
+    "Calculating option prices on a consecutive `N_steps` pair of trees at large `N_steps`, iterating for $\\alpha_\\infty$ between this pair and a left end point pair(or better average of several consecutive pairs for left end point). Then can quickly, accurately calculate option price from $L + \\alpha_\\infty (H - L)$.\n",
     "\n",
     "I would think that $\\alpha_\\infty$ would depend on the particular option (parameters) that is being priced. But then the appearance of the number $4=k(1)$ above would be pure coincidence. This suggests that we have stumbled upon a way to bypass the construction of large binomial trees for accurate option prices universally applicable to American Puts.\n",
     "\n",
