Remove old option_pricing.hpp and option_pricing.cc cells.

--- a/Doc_opt_prc.ipynb
+++ b/Doc_opt_prc.ipynb
@@ -41,9 +41,7 @@
    "execution_count": null,
    "id": "7ba5a163",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -179,9 +177,7 @@
    "execution_count": 1,
    "id": "f020ccb6",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -2075,12 +2071,12 @@
       "Euro put with Monte Carlo pricer with N_sims: 10000, N_steps: 1000\n",
       "r  Style    Class  K   T     S_o q sigma\n",
       "0.07 European Put   43 0.25 40.2  0.2  0.32:\n",
-      "price: 5.04759, std_dev: 0.010124\n",
-      "delta: -0.670958\n",
-      "gamma: 0.0516477\n",
-      "vega: 6.59833\n",
-      "theta: -7.37567\n",
-      "rho: -7.99233\n"
+      "price: 5.0606, std_dev: 0.010396\n",
+      "delta: -0.671157\n",
+      "gamma: 0.0504749\n",
+      "vega: 6.61385\n",
+      "theta: -7.39011\n",
+      "rho: -8.00633\n"
      ]
     }
    ],
@@ -2134,12 +2130,12 @@
       "Euro Straddle with MC pricer with N_sims: 10000, N_steps: 1000\n",
       "r    Style    Class    K T    S_o  q  sigma\n",
       "0.07 European Other   -1 0.25 40.2  0.2  0.32:\n",
-      "price: 5.10364, std_dev: 0.0376747\n",
-      "delta: -0.0768878\n",
-      "gamma: 0.113084\n",
-      "vega: 15.3553\n",
-      "theta: -9.89031\n",
-      "rho: -2.02976\n"
+      "price: 5.04937, std_dev: 0.0373352\n",
+      "delta: -0.105786\n",
+      "gamma: 0.116039\n",
+      "vega: 15.0226\n",
+      "theta: -9.84461\n",
+      "rho: -2.33207\n"
      ]
     }
    ],
@@ -2193,12 +2189,12 @@
       "Euro call with MC pricer with N_sims: 100000, N_steps: 1000\n",
       "r    Style    Class  K T   S_o  q  sigma\n",
       "0.07 European Call  40 0.25 60  0.2  0.32:\n",
-      "price: 17.7865, std_dev: 0.00371128\n",
-      "delta: 0.943765\n",
-      "gamma: 0.00213929\n",
-      "vega: 0.582566\n",
-      "theta: 8.25325\n",
-      "rho: 9.71027\n"
+      "price: 17.7863, std_dev: 0.00369526\n",
+      "delta: 0.943682\n",
+      "gamma: 0.0021539\n",
+      "vega: 0.586858\n",
+      "theta: 8.25226\n",
+      "rho: 9.70907\n"
      ]
     }
    ],
@@ -2255,12 +2251,12 @@
       "AsianPrc put with Monte Carlo pricer with N_sims: 10000, N_steps: 1000\n",
       "r    Style    AvgType   Class  K  T  S_o q sigma\n",
       "0.07 AsianPrc Arithmetic Put   50 0.5 49  0  0.3:\n",
-      "price: 2.42266, std_dev: 0.0150155\n",
-      "delta: -0.481308\n",
-      "gamma: 0.0693621\n",
-      "theta: -1.43011\n",
-      "rho: -6.98723\n",
-      "vega: 7.84633\n"
+      "price: 2.46551, std_dev: 0.0151071\n",
+      "delta: -0.479927\n",
+      "gamma: 0.0631033\n",
+      "theta: -1.41867\n",
+      "rho: -6.98529\n",
+      "vega: 7.9643\n"
      ]
     }
    ],
@@ -2337,12 +2333,12 @@
       "AsianPrc Put Geometric path avgeraging with N_sims: 10000, N_steps: 1000\n",
       "r    Style    AvgType   Class  K  T  S_o q sigma\n",
       "0.07 AsianPrc Geometric Put   50 0.5 49  0  0.3:\n",
-      "price: 2.51198, std_dev: 0.0152631\n",
-      "delta: -0.485408\n",
-      "gamma: 0.0666711\n",
-      "theta: -1.50144\n",
-      "rho: -7.19161\n",
-      "vega: 8.4205\n"
+      "price: 2.51943, std_dev: 0.0152416\n",
+      "delta: -0.485413\n",
+      "gamma: 0.0621468\n",
+      "theta: -1.56489\n",
+      "rho: -7.20181\n",
+      "vega: 8.44322\n"
      ]
     }
    ],
@@ -2398,12 +2394,12 @@
       "AsianExotic geometric_avg payoff MC pricer with N_sims: 10000, N_steps: 1000\n",
       "r    Style     AvgType Class  K  T  S_o  q  sigma\n",
       "0.07 AsianExotic Other Other   - 0.5 49  0.01  0.3:\n",
-      "price: 47.8427, std_dev: 0.00491441\n",
-      "delta: 0.976382\n",
-      "gamma: 2.35639e-14\n",
-      "theta: 2.29435\n",
+      "price: 47.8429, std_dev: 0.00498091\n",
+      "delta: 0.976386\n",
+      "gamma: 7.02159e-13\n",
+      "theta: 2.28954\n",
       "rho: -11.9477\n",
-      "vega: -1.25531\n"
+      "vega: -1.25409\n"
      ]
     }
    ],
@@ -2455,12 +2451,12 @@
       "AsianPrc Call Geometric path avgeraging with N_sims: 10000, N_steps: 1000\n",
       "r    Style    AvgType   Class  K  T  S_o q sigma\n",
       "0.07 AsianPrc Geometric Call  0 0.5 49  0.01  0.3:\n",
-      "price: 47.8452, std_dev: 0.00488561\n",
-      "delta: 0.976432\n",
-      "gamma: -2.27075e-12\n",
-      "theta: 2.26846\n",
-      "rho: -11.9483\n",
-      "vega: -1.2393\n"
+      "price: 47.8485, std_dev: 0.00503363\n",
+      "delta: 0.9765\n",
+      "gamma: 5.38571e-13\n",
+      "theta: 2.25276\n",
+      "rho: -11.9491\n",
+      "vega: -1.21686\n"
      ]
     }
    ],
